--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
   <title>Discussion Portal</title>
   <link rel="stylesheet" href="discuss.css">
+  <script src="https://kit.fontawesome.com/cbb0450385.js" crossorigin="anonymous"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
